--- a/task.ipynb
+++ b/task.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -11,7 +11,6 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
     "\n",
     "# метод для парсинга даты в целое число секунд\n",
     "def hms_to_seconds(t):\n",
@@ -24,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -33,12 +32,12 @@
    "source": [
     "#Считываем данные из файлов\n",
     "purchases = pd.read_csv('purchases.csv', delimiter=',')\n",
-    "visits = pd.read_csv('t1.csv', delimiter=',')"
+    "visits = pd.read_csv('visits.csv', delimiter=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -82,9 +81,9 @@
      "output_type": "stream",
      "text": [
       "[('desktop', 1) ('desktop', 2) ('desktop', 3) ('desktop', 4)\n",
-      " ('desktop', 5) ('desktop', 7) ('desktop', 9) ('desktop', 10) ('touch', 1)\n",
-      " ('touch', 2) ('touch', 3) ('touch', 4) ('touch', 5) ('touch', 9)\n",
-      " ('touch', 10)]\n",
+      " ('desktop', 5) ('desktop', 6) ('desktop', 7) ('desktop', 9)\n",
+      " ('desktop', 10) ('touch', 1) ('touch', 2) ('touch', 3) ('touch', 4)\n",
+      " ('touch', 5) ('touch', 6) ('touch', 7) ('touch', 9) ('touch', 10)]\n",
       "\n",
       "\n"
      ]
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -167,37 +166,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       device              end_ts  source_id   start_dt              start_ts  \\\n",
-      "1336  desktop 2017-03-26 12:51:44          1 2017-03-26  2017-03-26T12:20:14Z   \n",
-      "43      touch 2017-01-12 23:22:34          4 2017-01-12  2017-01-12T23:20:32Z   \n",
-      "579   desktop 2017-02-16 22:48:21          5 2017-02-16  2017-02-16T22:31:28Z   \n",
-      "1254  desktop 2017-05-02 11:18:08          4 2017-05-02  2017-05-02T11:10:11Z   \n",
-      "173   desktop 2016-07-25 15:02:23          1 2016-07-25  2016-07-25T14:59:26Z   \n",
-      "...       ...                 ...        ...        ...                   ...   \n",
-      "405   desktop 2017-02-26 17:34:40          4 2017-02-26  2017-02-26T17:19:45Z   \n",
-      "406   desktop 2017-05-25 17:15:53          2 2017-05-25  2017-05-25T17:05:29Z   \n",
-      "536   desktop 2016-10-10 16:29:18          4 2016-10-10  2016-10-10T15:54:10Z   \n",
-      "877   desktop 2016-08-05 12:18:30          4 2016-08-05  2016-08-05T12:14:03Z   \n",
-      "869   desktop 2016-08-17 15:49:22          4 2016-08-17  2016-08-17T15:46:45Z   \n",
+      "         device              end_ts  source_id   start_dt  \\\n",
+      "144039  desktop 2016-11-15 09:14:08          5 2016-11-15   \n",
+      "617785  desktop 2017-02-18 23:06:01          3 2017-02-18   \n",
+      "336307  desktop 2017-01-03 19:54:02          3 2017-01-03   \n",
+      "162368  desktop 2016-06-14 17:41:54          5 2016-06-14   \n",
+      "344374  desktop 2016-11-26 14:05:53          3 2016-11-26   \n",
+      "...         ...                 ...        ...        ...   \n",
+      "428715  desktop 2016-07-12 18:36:57          4 2016-07-12   \n",
+      "164109    touch 2017-05-28 18:03:24          4 2017-05-28   \n",
+      "285093  desktop 2017-02-05 18:01:28          3 2017-02-05   \n",
+      "49057   desktop 2017-03-27 21:27:12          3 2017-03-27   \n",
+      "32595   desktop 2017-02-06 13:55:15          3 2017-02-06   \n",
       "\n",
-      "             uid            time  time_v  cohort  \n",
-      "1336     3119825 0 days 12:51:44   46304       0  \n",
-      "43       4079182 0 days 23:22:34   84154      11  \n",
-      "579      5141732 0 days 22:48:21   82101       4  \n",
-      "1254     9576423 0 days 11:18:08   40688       3  \n",
-      "173     14857079 0 days 15:02:23   54143       0  \n",
-      "...          ...             ...     ...     ...  \n",
-      "405   4268397579 0 days 17:34:40   63280       3  \n",
-      "406   4271593279 0 days 17:15:53   62153       1  \n",
-      "536   4275033643 0 days 16:29:18   59358       3  \n",
-      "877   4277919091 0 days 12:18:30   44310       3  \n",
-      "869   4294203307 0 days 15:49:22   56962       3  \n",
+      "                    start_ts        uid            time  time_v  cohort  \n",
+      "144039  2016-11-15T09:11:16Z       4245 0 days 09:14:08   33248       4  \n",
+      "617785  2017-02-18T23:00:30Z       5097 0 days 23:06:01   83161       2  \n",
+      "336307  2017-01-03T19:44:56Z       8896 0 days 19:54:02   71642       2  \n",
+      "162368  2016-06-14T17:16:17Z      21017 0 days 17:41:54   63714       4  \n",
+      "344374  2016-11-26T14:01:27Z      30696 0 days 14:05:53   50753       2  \n",
+      "...                      ...        ...             ...     ...     ...  \n",
+      "428715  2016-07-12T18:08:38Z  571081075 0 days 18:36:57   67017       3  \n",
+      "164109  2017-05-28T17:58:24Z  571081479 0 days 18:03:24   65004      12  \n",
+      "285093  2017-02-05T17:59:32Z  571082449 0 days 18:01:28   64888       2  \n",
+      "49057   2017-03-27T21:07:32Z  571088694 0 days 21:27:12   77232       2  \n",
+      "32595   2017-02-06T13:53:05Z  571114661 0 days 13:55:15   50115       2  \n",
       "\n",
-      "[1370 rows x 9 columns]\n"
+      "[50000 rows x 9 columns]\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "for index, row in uuid.iterrows():\n",
     "    for i in range(0, len(u)): # пробегаемся по всем когортам\n",
     "        if row['device'] == u[i][0] and row['source_id'] == u[i][1]: # Смотрим к какой относится клиент\n",
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -272,72 +272,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In ('desktop', 1) - 96 Users\n",
-      "In ('desktop', 2) - 132 Users\n",
-      "In ('desktop', 3) - 270 Users\n",
-      "In ('desktop', 4) - 240 Users\n",
-      "In ('desktop', 5) - 181 Users\n",
-      "In ('desktop', 7) - 2 Users\n",
-      "In ('desktop', 9) - 39 Users\n",
-      "In ('desktop', 10) - 19 Users\n",
-      "In ('touch', 1) - 41 Users\n",
-      "In ('touch', 2) - 59 Users\n",
-      "In ('touch', 3) - 66 Users\n",
-      "In ('touch', 4) - 129 Users\n",
-      "In ('touch', 5) - 71 Users\n",
-      "In ('touch', 9) - 10 Users\n",
-      "In ('touch', 10) - 15 Users\n",
+      "In ('desktop', 1) - 1394 Users\n",
+      "In ('desktop', 2) - 2597 Users\n",
+      "In ('desktop', 3) - 10746 Users\n",
+      "In ('desktop', 4) - 10437 Users\n",
+      "In ('desktop', 5) - 7930 Users\n",
+      "In ('desktop', 6) - 2 Users\n",
+      "In ('desktop', 7) - 5 Users\n",
+      "In ('desktop', 9) - 956 Users\n",
+      "In ('desktop', 10) - 1088 Users\n",
+      "In ('touch', 1) - 719 Users\n",
+      "In ('touch', 2) - 1311 Users\n",
+      "In ('touch', 3) - 3387 Users\n",
+      "In ('touch', 4) - 5656 Users\n",
+      "In ('touch', 5) - 3010 Users\n",
+      "In ('touch', 7) - 4 Users\n",
+      "In ('touch', 9) - 321 Users\n",
+      "In ('touch', 10) - 437 Users\n",
       "\n",
       "\n",
-      "In ('desktop', 1) - 583.0200000000001 revenue\n",
-      "In ('desktop', 2) - 356.58 revenue\n",
-      "In ('desktop', 3) - 212.94000000000003 revenue\n",
-      "In ('desktop', 4) - 195.48000000000002 revenue\n",
-      "In ('desktop', 5) - 306.71999999999997 revenue\n",
+      "In ('desktop', 1) - 5423.889999999999 revenue\n",
+      "In ('desktop', 2) - 6645.329999999999 revenue\n",
+      "In ('desktop', 3) - 6950.670000000002 revenue\n",
+      "In ('desktop', 4) - 8551.91999999999 revenue\n",
+      "In ('desktop', 5) - 6491.969999999999 revenue\n",
+      "In ('desktop', 6) - 0.0 revenue\n",
       "In ('desktop', 7) - 0.0 revenue\n",
-      "In ('desktop', 9) - 25.060000000000002 revenue\n",
-      "In ('desktop', 10) - 0.0 revenue\n",
-      "In ('touch', 1) - 34.440000000000005 revenue\n",
-      "In ('touch', 2) - 108.03999999999999 revenue\n",
-      "In ('touch', 3) - 0.0 revenue\n",
-      "In ('touch', 4) - 62.5 revenue\n",
-      "In ('touch', 5) - 24.44 revenue\n",
-      "In ('touch', 9) - 0.0 revenue\n",
-      "In ('touch', 10) - 39.720000000000006 revenue\n",
+      "In ('desktop', 9) - 1272.9500000000005 revenue\n",
+      "In ('desktop', 10) - 650.4300000000009 revenue\n",
+      "In ('touch', 1) - 2494.040000000001 revenue\n",
+      "In ('touch', 2) - 2164.939999999999 revenue\n",
+      "In ('touch', 3) - 1232.0600000000013 revenue\n",
+      "In ('touch', 4) - 1911.2899999999988 revenue\n",
+      "In ('touch', 5) - 857.9900000000005 revenue\n",
+      "In ('touch', 6) - 0 revenue\n",
+      "In ('touch', 7) - 0.0 revenue\n",
+      "In ('touch', 9) - 293.90000000000003 revenue\n",
+      "In ('touch', 10) - 105.33000000000001 revenue\n",
       "\n",
       "\n",
-      "In ('desktop', 1) - 54017.0 median time (second)\n",
-      "In ('desktop', 2) - 54698.5 median time (second)\n",
-      "In ('desktop', 3) - 55959.5 median time (second)\n",
-      "In ('desktop', 4) - 58190.5 median time (second)\n",
-      "In ('desktop', 5) - 53429.0 median time (second)\n",
-      "In ('desktop', 7) - 56067.5 median time (second)\n",
-      "In ('desktop', 9) - 50733.0 median time (second)\n",
-      "In ('desktop', 10) - 58609.0 median time (second)\n",
-      "In ('touch', 1) - 56962.0 median time (second)\n",
-      "In ('touch', 2) - 58638.0 median time (second)\n",
-      "In ('touch', 3) - 55680.5 median time (second)\n",
-      "In ('touch', 4) - 59073.0 median time (second)\n",
-      "In ('touch', 5) - 57460.0 median time (second)\n",
-      "In ('touch', 9) - 50740.5 median time (second)\n",
-      "In ('touch', 10) - 68704.0 median time (second)\n",
+      "In ('desktop', 1) - 55133.25 median time (second)\n",
+      "In ('desktop', 2) - 55191.0 median time (second)\n",
+      "In ('desktop', 3) - 56481.75 median time (second)\n",
+      "In ('desktop', 4) - 56376.5 median time (second)\n",
+      "In ('desktop', 5) - 55316.75 median time (second)\n",
+      "In ('desktop', 6) - 60857.0 median time (second)\n",
+      "In ('desktop', 7) - 70239.0 median time (second)\n",
+      "In ('desktop', 9) - 56356.0 median time (second)\n",
+      "In ('desktop', 10) - 58834.75 median time (second)\n",
+      "In ('touch', 1) - 56250.0 median time (second)\n",
+      "In ('touch', 2) - 57193.0 median time (second)\n",
+      "In ('touch', 3) - 57934.0 median time (second)\n",
+      "In ('touch', 4) - 59121.5 median time (second)\n",
+      "In ('touch', 5) - 54889.0 median time (second)\n",
+      "In ('touch', 6) - nan median time (second)\n",
+      "In ('touch', 7) - 50757.75 median time (second)\n",
+      "In ('touch', 9) - 58133.0 median time (second)\n",
+      "In ('touch', 10) - 54549.0 median time (second)\n",
       "\n",
       "\n",
-      "LTV0 = 328051.99312500004\n",
-      "LTV1 = 147760.53886363635\n",
-      "LTV2 = 44133.39233333334\n",
-      "LTV3 = 47396.16225000001\n",
-      "LTV4 = 90540.0159116022\n",
+      "LTV0 = 3.8908823529411762\n",
+      "LTV1 = 2.558848671544089\n",
+      "LTV2 = 0.6468146286990509\n",
+      "LTV3 = 0.8193848807128474\n",
+      "LTV4 = 0.8186595208070617\n",
       "LTV5 = 0.0\n",
-      "LTV6 = 32599.204615384617\n",
-      "LTV7 = 0.0\n",
-      "LTV8 = 47848.08\n",
-      "LTV9 = 107377.11050847456\n",
-      "LTV10 = 0.0\n",
-      "LTV11 = 28620.639534883718\n",
-      "LTV12 = 19779.188732394367\n",
-      "LTV13 = 0.0\n",
-      "LTV14 = 181928.19200000004\n"
+      "LTV6 = 0.0\n",
+      "LTV7 = 1.3315376569037662\n",
+      "LTV8 = 0.5978216911764713\n",
+      "LTV9 = 3.4687621696801125\n",
+      "LTV10 = 1.651365369946605\n",
+      "LTV11 = 0.36376144080307093\n",
+      "LTV12 = 0.33792256011315397\n",
+      "LTV13 = 0.2850465116279071\n",
+      "LTV14 = 0.0\n",
+      "LTV15 = 0.0\n",
+      "LTV16 = 0.6725400457665904\n"
      ]
     }
    ],
@@ -400,8 +410,8 @@
     "##############\n",
     "# 6.Для каждой когорты посчитать LTV.\n",
     "\n",
-    "for i in range(0, len(u)):\n",
-    "    print('LTV' + str(i) + ' = ' + str(price_k[i] / count[i]))\n",
+    "for i in range(0, len(cohort)):\n",
+    "    print('LTV' + str(i) + ' = ' + str(price_k[i] / count[i]))"
    ]
   },
   {
